# python-lazyimports

./: LICENSE  README.md  pyproject.toml  test_lazyimports.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml  issue.md
.github/workflows/: main.yml
docs/: documentation.md
lazyimports/: __init__.py  core.py
