[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-lazyimports"
version = "0.1.1"
description = "Backport of Python 3.15's lazy import statement."
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"

[project.urls]
Repository = "https://github.com/aiwonderland/python-lazyimports"

[tool.hatch.build.targets.wheel]
packages = ["lazyimports"]
